--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.10",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^5.0.1",
+    "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.1.0",
     "vue-loader": "^13.5.0",
     "vue-style-loader": "^3.0.3",
