--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "bson-objectid": "^1.2.2",
+    "copy-webpack-plugin": "^4.5.1",
     "lodash": "^4.17.5",
     "simplify-polyline": "^0.0.6",
     "visvalingam-simplifier": "^0.1.4",
