--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev-video": "webpack-dev-server --inline --progress",
+    "build": "webpack",
     "test-video": "NODE_ENV=test mocha --exit $(find src/test -name '*.js') --require babel-register"
   },
   "devDependencies": {
