--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 node_modules/
+dist/
 
 # User-specific stuff:
 .idea/**/workspace.xml
