--- a/player/package.json
+++ b/player/package.json
@@ -20,9 +20,9 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
     "mocha": "^5.0.1",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
