--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "visvalingam-simplifier": "^0.1.4",
     "vue": "^2.5.13",
     "vue-swatches": "^1.0.0-rc.9",
+    "vue2-touch-events": "^1.0.0",
     "vuetify": "^1.0.14",
     "vuex": "^3.0.1"
   },
