--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "author": "slim",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress",
-    "build": "webpack",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --port 8069 --inline --hot",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack",
     "test": "NODE_ENV=test mocha --exit $(find src/test -name '*.js') --require babel-register"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -21,22 +21,28 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "css-loader": "^0.28.10",
+    "cross-env": "^5.1.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.0.6",
     "mocha": "^5.0.1",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "vue-loader": "^13.5.0",
+    "vue-loader": "^15.0.7",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.9",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
-    "webpack-mild-compile": "^3.2.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-mild-compile": "^3.2.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "bson-objectid": "^1.2.2",
     "copy-webpack-plugin": "^4.5.1",
     "lodash": "^4.17.5",
+    "request-promise-lite": "^0.13.1",
     "simplify-polyline": "^0.0.6",
     "visvalingam-simplifier": "^0.1.4",
     "vue": "^2.5.13",
