--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "hammerjs": "^2.0.8",
     "bson-objectid": "^1.2.2",
     "copy-webpack-plugin": "^4.5.1",
     "lodash": "^4.17.5",
