refacto des modules

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http{
                     try_files $uri $uri/ =404;
             }
             location /api {
-                    proxy_pass http://trees-api:8080;
+                    proxy_pass http://api-tree:8080;
             }
     }
 }
