--- a/package.json
+++ b/package.json
@@ -11,46 +11,46 @@
     "test": "NODE_ENV=test mocha --exit $(find src/test -name '*.js') --require babel-register"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "css-loader": "^0.28.10",
-    "cross-env": "^5.1.4",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^3.0.6",
-    "mocha": "^5.0.1",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "vue-loader": "^15.0.7",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.9",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-mild-compile": "^3.2.0",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-stage-3": "6.24.1",
+    "babel-register": "6.26.0",
+    "chai": "4.1.2",
+    "css-loader": "0.28.10",
+    "cross-env": "5.1.4",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "friendly-errors-webpack-plugin": "1.6.1",
+    "html-webpack-plugin": "3.0.6",
+    "mocha": "5.0.1",
+    "rimraf": "2.6.2",
+    "style-loader": "0.20.3",
+    "uglifyjs-webpack-plugin": "1.2.4",
+    "vue-loader": "15.0.7",
+    "vue-style-loader": "3.0.3",
+    "vue-template-compiler": "2.5.9",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15",
+    "webpack-dev-server": "3.1.3",
+    "webpack-mild-compile": "3.2.0",
+    "webpack-visualizer-plugin": "0.1.11"
   },
   "dependencies": {
-    "hammerjs": "^2.0.8",
-    "bson-objectid": "^1.2.2",
-    "copy-webpack-plugin": "^4.5.1",
-    "lodash": "^4.17.5",
-    "request-promise-lite": "^0.13.1",
-    "simplify-polyline": "^0.0.6",
-    "visvalingam-simplifier": "^0.1.4",
-    "vue": "^2.5.13",
-    "vue-swatches": "^1.0.0-rc.9",
-    "vue2-touch-events": "^1.0.0",
-    "vuetify": "^1.0.14",
-    "vuex": "^3.0.1"
+    "hammerjs": "2.0.8",
+    "bson-objectid": "1.2.2",
+    "copy-webpack-plugin": "4.5.1",
+    "lodash": "4.17.5",
+    "request-promise-lite": "0.13.1",
+    "simplify-polyline": "0.0.6",
+    "visvalingam-simplifier": "0.1.4",
+    "vue": "2.5.13",
+    "vue-swatches": "1.0.0-rc.9",
+    "vue2-touch-events": "1.0.0",
+    "vuetify": "1.0.14",
+    "vuex": "3.0.1"
   },
   "engines": {
     "node": ">= 4.0.0",
