--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-serve --port 8069 --config webpack.config.js",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack --display-error-details --progress",
-    "test": "NODE_ENV=test mocha --exit $(find src/test -name '*.js') --require babel-register"
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "test": "NODE_ENV=test mocha --exit $(find src/test -name '*.js') --require babel-register",
+    "deploy": "yarn run build && scp -r dist/var/www/draw.blueforest.org pi@blueforest.org:/var/www"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -43,14 +44,13 @@
   },
   "dependencies": {
     "bson-objectid": "1.2.2",
-    "copy-webpack-plugin": "4.5.1",
+    "copy-webpack-plugin": "4.5.2",
     "hammerjs": "2.0.8",
     "lodash": "4.17.5",
     "request-promise-lite": "0.13.1",
     "simplify-polyline": "0.0.6",
     "visvalingam-simplifier": "0.1.4",
     "vue": "2.5.17",
-    "vue-swatches": "1.0.2",
     "vue2-touch-events": "1.0.0",
     "vuetify": "1.2.3",
     "vuex": "3.0.1"
