--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ events{
 }
 
 http{
-    include    conf/mime.types;
+    include mime.types;
     server {
             listen 80;
             listen [::]:80;
