--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/runtime": "7.0.0",
     "babel-loader": "8.0.2",
     "chai": "4.1.2",
+    "connect-history-api-fallback": "^1.6.0",
     "cross-env": "5.1.4",
     "css-loader": "0.28.10",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
@@ -28,6 +29,7 @@
     "html-webpack-plugin": "3.0.6",
     "http-proxy-middleware": "0.19.0",
     "koa-connect": "2.0.1",
+    "lodash-webpack-plugin": "^0.11.5",
     "mocha": "5.0.1",
     "rimraf": "2.6.2",
     "style-loader": "0.20.3",
