--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "webpack-command": "0.4.1",
     "webpack-node-externals": "1.7.2",
     "webpack-serve": "2.0.2",
-    "webpack-visualizer-plugin": "0.1.11"
+    "webpack-visualizer-plugin": "0.1.11",
+    "copy-webpack-plugin": "4.5.2"
   },
   "dependencies": {
     "bson-objectid": "1.2.2",
-    "copy-webpack-plugin": "4.5.2",
     "hammerjs": "2.0.8",
     "lodash": "4.17.5",
     "request-promise-lite": "0.13.1",
