--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "8.0.2",
     "chai": "4.1.2",
     "connect-history-api-fallback": "^1.6.0",
+    "copy-webpack-plugin": "4.5.2",
     "cross-env": "5.1.4",
     "css-loader": "0.28.10",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
@@ -41,20 +42,22 @@
     "webpack-command": "0.4.1",
     "webpack-node-externals": "1.7.2",
     "webpack-serve": "2.0.2",
-    "webpack-visualizer-plugin": "0.1.11",
-    "copy-webpack-plugin": "4.5.2"
+    "webpack-visualizer-plugin": "0.1.11"
   },
   "dependencies": {
     "bson-objectid": "1.2.2",
     "hammerjs": "2.0.8",
+    "jwt-decode": "^2.2.0",
     "lodash": "4.17.5",
-    "request-promise-lite": "0.13.1",
     "simplify-polyline": "0.0.6",
     "visvalingam-simplifier": "0.1.4",
     "vue": "2.5.17",
+    "vue-resource": "1.5.1",
+    "vue-router": "3.0.2",
     "vue2-touch-events": "1.0.0",
     "vuetify": "1.2.3",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "window-or-global": "^1.0.1"
   },
   "engines": {
     "node": ">= 4.0.0",
