--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "vue-loader": "15.4.2",
     "vue-style-loader": "4.1.2",
     "vue-template-compiler": "2.5.17",
-    "webpack": "4.19.1",
-    "webpack-cli": "3.1.0",
-    "webpack-command": "0.4.1",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0",
+    "webpack-command": "0.4.2",
     "webpack-node-externals": "1.7.2",
     "webpack-serve": "2.0.2",
     "webpack-visualizer-plugin": "0.1.11"
@@ -47,7 +47,7 @@
   "dependencies": {
     "bson-objectid": "1.2.2",
     "hammerjs": "2.0.8",
-    "jwt-decode": "^2.2.0",
+    "jwt-decode": "2.2.0",
     "lodash": "4.17.5",
     "simplify-polyline": "0.0.6",
     "visvalingam-simplifier": "0.1.4",
@@ -57,7 +57,7 @@
     "vue2-touch-events": "1.0.0",
     "vuetify": "1.2.3",
     "vuex": "3.0.1",
-    "window-or-global": "^1.0.1"
+    "window-or-global": "1.0.1"
   },
   "engines": {
     "node": ">= 4.0.0",
