--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "env": "web",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "videodraw for trees",
   "main": "index.js",
   "author": "slim",
@@ -16,25 +16,25 @@
     "@babel/plugin-transform-runtime": "7.0.0",
     "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "7.0.0",
     "@babel/runtime": "7.0.0",
-    "babel-loader": "8.0.2",
+    "babel-loader": "8.0.5",
     "chai": "4.1.2",
-    "connect-history-api-fallback": "^1.6.0",
+    "connect-history-api-fallback": "1.6.0",
     "copy-webpack-plugin": "4.5.2",
     "cross-env": "5.1.4",
-    "css-loader": "0.28.10",
+    "css-loader": "2.1.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "3.0.6",
     "http-proxy-middleware": "0.19.0",
     "koa-connect": "2.0.1",
-    "lodash-webpack-plugin": "^0.11.5",
+    "lodash-webpack-plugin": "0.11.5",
     "mocha": "5.0.1",
     "rimraf": "2.6.2",
     "style-loader": "0.20.3",
     "uglifyjs-webpack-plugin": "1.2.4",
-    "vue-loader": "15.4.2",
+    "vue-loader": "15.7.0",
     "vue-style-loader": "4.1.2",
     "vue-template-compiler": "2.5.17",
     "webpack": "4.29.6",
@@ -55,8 +55,8 @@
     "vue-resource": "1.5.1",
     "vue-router": "3.0.2",
     "vue2-touch-events": "1.0.0",
-    "vuetify": "1.2.3",
-    "vuex": "3.0.1",
+    "vuetify": "1.5.7",
+    "vuex": "3.1.0",
     "window-or-global": "1.0.1"
   },
   "engines": {
